# pnasystems-compressor

./: LICENSE  README.md  pyproject.toml  setup.py
pnasystems_compressor/: __init__.py  core.py
tests/: test_compressor.py
