[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pnasystems-compressor"
version = "1.0.0"
authors = [
    { name = "Powerentity" },
]
description = "A fully custom, lossless, high‑efficiency compression/decompression system"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Goplop0959/pnasystems-compressor"
Repository = "https://github.com/Goplop0959/pnasystems-compressor"
Issues = "https://github.com/Goplop0959/pnasystems-compressor/issues"
